<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="401dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_rectangle_black"/>
    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:gravity="center"
        android:padding="@dimen/dis_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawablePadding="@dimen/dis_10"
        android:fontFamily="@font/poppins_regular"
        app:drawableStartCompat="@drawable/ic_back"
        app:drawableTint="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="@dimen/dis_16"
        android:textSize="@dimen/text_24"
        android:fontFamily="@font/teko_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/my_account"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="@dimen/dis_16"
        android:layout_marginStart="@dimen/dis_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_back"
        android:src="@drawable/ic_user_profile_empty"/>
    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_18"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dis_16"
        app:layout_constraintTop_toTopOf="@+id/iv_profile"
        app:layout_constraintLeft_toRightOf="@+id/iv_profile"
        android:fontFamily="@font/poppins_regular"
        android:text="Henry James"/>
    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_14"
        android:textColor="@color/email_text"
        android:layout_marginStart="@dimen/dis_16"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
        app:layout_constraintLeft_toRightOf="@+id/iv_profile"
        android:fontFamily="@font/inter_regular"
        android:text="henryjames@gmail.com"/>
    <TextView
        android:id="@+id/tv_update_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_16"
        android:textColor="@color/app_red"
        android:paddingTop="@dimen/dis_10"
        android:paddingBottom="@dimen/dis_10"
        android:layout_marginStart="@dimen/dis_16"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_email"
        app:layout_constraintLeft_toRightOf="@+id/iv_profile"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/update_profile"/>
    <RelativeLayout
        android:id="@+id/rl_batch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dis_20"
        android:layout_margin="@dimen/dis_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_profile"
        android:background="@drawable/ic_gold_bg_without_dot">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dis_10"
            android:layout_marginTop="@dimen/dis_10"
            android:layout_marginEnd="@dimen/dis_10"
            android:layout_marginBottom="@dimen/dis_10"
            android:background="@drawable/ic_gold_bg_with_dot"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="$ 5.55"
                android:textColor="@color/app_red"
                android:textSize="@dimen/text_42" />

            <TextView
                android:id="@+id/tv_per_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/per_month"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/tv_full_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dis_20"
                android:layout_marginTop="@dimen/dis_10"
                android:layout_marginRight="@dimen/dis_20"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/full_access_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_20" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dis_20"
                android:layout_marginTop="@dimen/dis_10"
                android:layout_marginRight="@dimen/dis_20"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/gain_access_text"
                android:textColor="@color/personal_color"
                android:textSize="@dimen/text_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dis_20"
                android:layout_marginTop="@dimen/dis_10"
                android:layout_marginRight="@dimen/dis_20"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/live_scanner"
                android:textColor="@color/personal_color"
                android:textSize="@dimen/text_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dis_16"
                android:layout_marginTop="@dimen/dis_10"
                android:layout_marginRight="@dimen/dis_16"
                android:background="#E9C174" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dis_20"
                android:layout_marginTop="@dimen/dis_10"
                android:layout_marginRight="@dimen/dis_20"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/add_free"
                android:textColor="@color/personal_color"
                android:textSize="@dimen/text_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dis_16"
                android:layout_marginTop="@dimen/dis_10"
                android:layout_marginRight="@dimen/dis_16"
                android:background="#E9C174" />

            <TextView
                android:id="@+id/tv_gain_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dis_20"
                android:layout_marginTop="@dimen/dis_10"
                android:layout_marginRight="@dimen/dis_20"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/custom_notification"
                android:textColor="@color/personal_color"
                android:textSize="@dimen/text_14" />

            <Button
                android:id="@+id/btn_get_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dis_16"
                android:layout_marginTop="@dimen/dis_16"
                android:layout_marginEnd="@dimen/dis_16"
                android:fontFamily="@font/poppins_medium"
                android:padding="@dimen/dis_10"
                android:text="@string/get_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16" />
        </LinearLayout>
    </RelativeLayout>

        <TextView
            android:id="@+id/tv_terms_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_service"
            android:textSize="@dimen/text_16"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/personal_color"
            android:padding="@dimen/dis_10"
            android:layout_marginStart="@dimen/dis_5"
            android:layout_marginTop="@dimen/dis_20"
            android:layout_marginEnd="@dimen/dis_10"
            android:drawablePadding="@dimen/dis_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_batch"
            app:drawableStartCompat="@drawable/ic_terms_service"
            app:drawableEndCompat="@drawable/ic_right_arrow"
            app:drawableTint="@color/black" />
        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/text_16"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/personal_color"
            android:padding="@dimen/dis_10"
            android:layout_marginStart="@dimen/dis_5"
            android:layout_marginEnd="@dimen/dis_10"
            android:drawablePadding="@dimen/dis_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_terms_service"
            app:drawableStartCompat="@drawable/ic_terms_service"
            app:drawableEndCompat="@drawable/ic_right_arrow"
            app:drawableTint="@color/black" />
        <TextView
            android:id="@+id/tv_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="@dimen/text_16"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/personal_color"
            android:padding="@dimen/dis_10"
            android:layout_marginStart="@dimen/dis_5"
            android:layout_marginEnd="@dimen/dis_10"
            android:drawablePadding="@dimen/dis_16"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dis_30"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_privacy_policy"
            app:drawableStartCompat="@drawable/ic_sign_out"
            app:drawableEndCompat="@drawable/ic_right_arrow"
            app:drawableTint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>