<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/rounded_corner_rectangle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heading_grey_bar_length"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dis_10"
        android:paddingRight="@dimen/dis_10"
        android:background="@drawable/rounded_corner_rectangle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/teko_regular"
            android:text="@string/select_areas"
            android:textColor="@color/heading_color"
            android:textSize="@dimen/text_28" />

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/dis_10"
            android:text="@string/done"
            android:textColor="@color/app_red"
            android:textSize="@dimen/text_16" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text_18"
        android:layout_margin="@dimen/dis_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_header"/>
    <TextView
        android:id="@+id/tv_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_all"
        android:textColor="@color/app_red"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text_16"
        android:layout_marginEnd="@dimen/dis_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_country_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_country_name"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_sub_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_sub_filter_item"
        app:layout_constraintLeft_toLeftOf="@+id/tv_country_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_country_name"/>

    <TextView
        android:id="@+id/tv_no_data"
        android:text="@string/no_data_found"
        android:visibility="gone"
        android:textColor="@color/choose_text_color"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:theme="@style/redProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/rl_header" />


</androidx.constraintlayout.widget.ConstraintLayout>